v0.0.1/modules/schema/pages/class/LandProperty.adoc
= `LandProperty`
:toclevels: 4


+++Information about a particular piece of (land) property such as its use. Ownership of the property may be determined through associations to Organisations and/or ErpPersons.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LandProperty`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`LandProperty`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
LandProperty {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PropertyOrganisationRole {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetContainer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpSiteLevelData {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PersonPropertyRole {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



LocationGrant {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



RightOfWay {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




LandProperty -> Status: status


LandProperty -> PropertyOrganisationRole: ErpOrganisationRoles


LandProperty -> AssetContainer: AssetContainers


LandProperty -> ErpSiteLevelData: ErpSiteLevelDatas


LandProperty -> PersonPropertyRole: ErpPersonRoles


LandProperty -> Location: Locations


LandProperty -> LocationGrant: LocationGrants


LandProperty -> RightOfWay: RightOfWays


LandProperty -> DiagramObject: DiagramObjects


LandProperty -> InstanceSet: InstanceSet


LandProperty -> Name: Names


LandProperty -> ChangeSetMember: PropertiesCIMDataObject


LandProperty -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<demographicKind,`demographicKind`>>
| 0..1
| xref::enumeration/DemographicKind.adoc[`DemographicKind`]
| +++Demographics around the site.+++

| <<externalRecordReference,`externalRecordReference`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Reference allocated by the governing organisation (such as municipality) to this piece of land that has a formal reference to Surveyor General's records. The governing organisation is specified in associated Organisation.+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/LandPropertyKind.adoc[`LandPropertyKind`]
| +++Kind of (land) property, categorised according to its main functional use from the utility's perspective.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| n/a

| <<AssetContainers,`AssetContainers`>>
| 0..*
| xref::class/AssetContainer.adoc[`AssetContainer`]
| n/a

| <<ErpOrganisationRoles,`ErpOrganisationRoles`>>
| 0..*
| xref::class/PropertyOrganisationRole.adoc[`PropertyOrganisationRole`]
| n/a

| <<ErpPersonRoles,`ErpPersonRoles`>>
| 0..*
| xref::class/PersonPropertyRole.adoc[`PersonPropertyRole`]
| n/a

| <<ErpSiteLevelDatas,`ErpSiteLevelDatas`>>
| 0..*
| xref::class/ErpSiteLevelData.adoc[`ErpSiteLevelData`]
| n/a

| <<LocationGrants,`LocationGrants`>>
| 0..*
| xref::class/LocationGrant.adoc[`LocationGrant`]
| +++All location grants this land property has.+++

| <<Locations,`Locations`>>
| 0..*
| xref::class/Location.adoc[`Location`]
| +++The spatail description of a piece of property.+++

| <<RightOfWays,`RightOfWays`>>
| 0..*
| xref::class/RightOfWay.adoc[`RightOfWay`]
| +++All rights of way this land property has.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AssetContainers]
=== `AssetContainers`


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.AssetContainers`
| Cardinality
| 0..*
| Type
| xref::class/AssetContainer.adoc[`AssetContainer`]


|===

//[discrete]
[#demographicKind]
=== `demographicKind`
+++Demographics around the site.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.demographicKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/DemographicKind.adoc[`DemographicKind`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ErpOrganisationRoles]
=== `ErpOrganisationRoles`


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.ErpOrganisationRoles`
| Cardinality
| 0..*
| Type
| xref::class/PropertyOrganisationRole.adoc[`PropertyOrganisationRole`]


|===

//[discrete]
[#ErpPersonRoles]
=== `ErpPersonRoles`


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.ErpPersonRoles`
| Cardinality
| 0..*
| Type
| xref::class/PersonPropertyRole.adoc[`PersonPropertyRole`]


|===

//[discrete]
[#ErpSiteLevelDatas]
=== `ErpSiteLevelDatas`


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.ErpSiteLevelDatas`
| Cardinality
| 0..*
| Type
| xref::class/ErpSiteLevelData.adoc[`ErpSiteLevelData`]


|===

//[discrete]
[#externalRecordReference]
=== `externalRecordReference`
+++Reference allocated by the governing organisation (such as municipality) to this piece of land that has a formal reference to Surveyor General's records. The governing organisation is specified in associated Organisation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.externalRecordReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kind]
=== `kind`
+++Kind of (land) property, categorised according to its main functional use from the utility's perspective.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/LandPropertyKind.adoc[`LandPropertyKind`]


|===

//[discrete]
[#LocationGrants]
=== `LocationGrants`
+++All location grants this land property has.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.LocationGrants`
| Cardinality
| 0..*
| Type
| xref::class/LocationGrant.adoc[`LocationGrant`]


|===

//[discrete]
[#Locations]
=== `Locations`
+++The spatail description of a piece of property.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.Locations`
| Cardinality
| 0..*
| Type
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RightOfWays]
=== `RightOfWays`
+++All rights of way this land property has.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.RightOfWays`
| Cardinality
| 0..*
| Type
| xref::class/RightOfWay.adoc[`RightOfWay`]


|===

//[discrete]
[#status]
=== `status`


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


