v1.1.0/modules/schema/pages/class/LandProperty.adoc
= `LandProperty`
:toclevels: 4


+++Information about a particular piece of (land) property such as its use. Ownership of the property may be determined through associations to Organisations and/or ErpPersons.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LandProperty`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`LandProperty`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AssetContainers,`AssetContainers`>>
//| [[slots_table.AssetContainers]]<<AssetContainers,`AssetContainers`>>
| 0..* +
xref::class/AssetContainer.adoc[`AssetContainer`]
| _n/a_
| _n/a_

| <<ErpOrganisationRoles,`ErpOrganisationRoles`>>
//| [[slots_table.ErpOrganisationRoles]]<<ErpOrganisationRoles,`ErpOrganisationRoles`>>
| 0..* +
xref::class/PropertyOrganisationRole.adoc[`PropertyOrganisationRole`]
| _n/a_
| _n/a_

| <<ErpPersonRoles,`ErpPersonRoles`>>
//| [[slots_table.ErpPersonRoles]]<<ErpPersonRoles,`ErpPersonRoles`>>
| 0..* +
xref::class/PersonPropertyRole.adoc[`PersonPropertyRole`]
| _n/a_
| _n/a_

| <<ErpSiteLevelDatas,`ErpSiteLevelDatas`>>
//| [[slots_table.ErpSiteLevelDatas]]<<ErpSiteLevelDatas,`ErpSiteLevelDatas`>>
| 0..* +
xref::class/ErpSiteLevelData.adoc[`ErpSiteLevelData`]
| _n/a_
| _n/a_

| <<LocationGrants,`LocationGrants`>>
//| [[slots_table.LocationGrants]]<<LocationGrants,`LocationGrants`>>
| 0..* +
xref::class/LocationGrant.adoc[`LocationGrant`]
| +++All location grants this land property has.+++
| _n/a_

| <<Locations,`Locations`>>
//| [[slots_table.Locations]]<<Locations,`Locations`>>
| 0..* +
xref::class/Location.adoc[`Location`]
| +++The spatail description of a piece of property.+++
| _n/a_

| <<RightOfWays,`RightOfWays`>>
//| [[slots_table.RightOfWays]]<<RightOfWays,`RightOfWays`>>
| 0..* +
xref::class/RightOfWay.adoc[`RightOfWay`]
| +++All rights of way this land property has.+++
| _n/a_

| <<demographicKind,`demographicKind`>>
//| [[slots_table.demographicKind]]<<demographicKind,`demographicKind`>>
| 0..1 +
xref::enumeration/DemographicKind.adoc[`DemographicKind`]
| +++Demographics around the site.+++
| _n/a_

| <<externalRecordReference,`externalRecordReference`>>
//| [[slots_table.externalRecordReference]]<<externalRecordReference,`externalRecordReference`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Reference allocated by the governing organisation (such as municipality) to this piece of land that has a formal reference...+++
| _n/a_

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/LandPropertyKind.adoc[`LandPropertyKind`]
| +++Kind of (land) property, categorised according to its main functional use from the utility's perspective.+++
| _n/a_

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| _n/a_
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AssetContainers]
=== `AssetContainers`



[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.AssetContainers`
| Cardinality
| 0..*
| Type
| xref::class/AssetContainer.adoc[`AssetContainer`]


|===

////
[.text-left]
--
<<slots_table.AssetContainers,&#10548;>>
--
////


//[discrete]
[#demographicKind]
=== `demographicKind`
+++Demographics around the site.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.demographicKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/DemographicKind.adoc[`DemographicKind`]


|===

////
[.text-left]
--
<<slots_table.demographicKind,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#ErpOrganisationRoles]
=== `ErpOrganisationRoles`



[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.ErpOrganisationRoles`
| Cardinality
| 0..*
| Type
| xref::class/PropertyOrganisationRole.adoc[`PropertyOrganisationRole`]


|===

////
[.text-left]
--
<<slots_table.ErpOrganisationRoles,&#10548;>>
--
////


//[discrete]
[#ErpPersonRoles]
=== `ErpPersonRoles`



[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.ErpPersonRoles`
| Cardinality
| 0..*
| Type
| xref::class/PersonPropertyRole.adoc[`PersonPropertyRole`]


|===

////
[.text-left]
--
<<slots_table.ErpPersonRoles,&#10548;>>
--
////


//[discrete]
[#ErpSiteLevelDatas]
=== `ErpSiteLevelDatas`



[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.ErpSiteLevelDatas`
| Cardinality
| 0..*
| Type
| xref::class/ErpSiteLevelData.adoc[`ErpSiteLevelData`]


|===

////
[.text-left]
--
<<slots_table.ErpSiteLevelDatas,&#10548;>>
--
////


//[discrete]
[#externalRecordReference]
=== `externalRecordReference`
+++Reference allocated by the governing organisation (such as municipality) to this piece of land that has a formal reference to Surveyor General's records. The governing organisation is specified in associated Organisation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.externalRecordReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.externalRecordReference,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++Kind of (land) property, categorised according to its main functional use from the utility's perspective.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/LandPropertyKind.adoc[`LandPropertyKind`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#LocationGrants]
=== `LocationGrants`
+++All location grants this land property has.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.LocationGrants`
| Cardinality
| 0..*
| Type
| xref::class/LocationGrant.adoc[`LocationGrant`]


|===

////
[.text-left]
--
<<slots_table.LocationGrants,&#10548;>>
--
////


//[discrete]
[#Locations]
=== `Locations`
+++The spatail description of a piece of property.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.Locations`
| Cardinality
| 0..*
| Type
| xref::class/Location.adoc[`Location`]


|===

////
[.text-left]
--
<<slots_table.Locations,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RightOfWays]
=== `RightOfWays`
+++All rights of way this land property has.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.RightOfWays`
| Cardinality
| 0..*
| Type
| xref::class/RightOfWay.adoc[`RightOfWay`]


|===

////
[.text-left]
--
<<slots_table.RightOfWays,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`



[cols="h,4",width=65%]
|===
| URI
| `cim:LandProperty.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/AssetContainer.adoc[`AssetContainer`] | xref::class/AssetContainer.adoc#LandProperties[`LandProperties`]



| xref::class/ErpSiteLevelData.adoc[`ErpSiteLevelData`] | xref::class/ErpSiteLevelData.adoc#LandProperty[`LandProperty`]



| xref::class/Location.adoc[`Location`] | xref::class/Location.adoc#LandProperties[`LandProperties`]



| xref::class/LocationGrant.adoc[`LocationGrant`] | xref::class/LocationGrant.adoc#LandProperty[`LandProperty`]



| xref::class/PersonPropertyRole.adoc[`PersonPropertyRole`] | xref::class/PersonPropertyRole.adoc#LandProperty[`LandProperty`]



| xref::class/PropertyOrganisationRole.adoc[`PropertyOrganisationRole`] | xref::class/PropertyOrganisationRole.adoc#LandProperty[`LandProperty`]



| xref::class/RightOfWay.adoc[`RightOfWay`] | xref::class/RightOfWay.adoc#LandProperties[`LandProperties`]


|===

